crates/backlog-api-macros/tests/ui/tuple_struct_not_supported.rs
use backlog_api_macros::ToFormParams;

#[derive(ToFormParams)]
struct TupleStruct(String, u32);

fn main() {}
